Bug 90598 - Character Set window dosn't resize
Summary: Character Set window dosn't resize
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: Other Linux (All)
: low minor
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-13 21:26 UTC by Puggan SE
Modified: 2016-10-25 19:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Resized window (29.74 KB, image/png)
2015-04-13 21:26 UTC, Puggan SE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Puggan SE 2015-04-13 21:26:45 UTC
Created attachment 114768 [details]
Resized window

When opening a dBase file, i got a smal window for selecting charset, when resizeing the window, it's content stays in the upper corner.
Could you make the contents size abit more dynamic?
Comment 1 Adolfo Jayme Barrientos 2015-04-14 04:06:25 UTC
Thank you for your bug report.
Comment 2 Commit Notification 2015-12-17 18:57:19 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b8fd386aa8c20b56f6cba0683a22ce37c8ccc26

tdf#90598: filter options dialog controls expandable

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.