tdf#90598: filter options dialog controls expandable

listboxes are expandable horizontally and in non-dropdown mode also vertically

Change-Id: I77fdc332ee79437c054e6a0d7f8e3c87e1ff3791